// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`__access_export__ returns default export if it exists: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "function importedFile() {
  const square = x => x * x;
  const cube = x => x * x * x;
  return pair(cube, list(pair(\\"square\\", square)));
}
// When 'null' is passed in as the name of the export,
// '__access_export__' returns the default export.
const square = __access_export__(importedFile(), \\"default\\");
square(5);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 125,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`__access_export__ returns named export if it exists: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "function importedFile() {
  const square = x => x * x;
  const cube = x => x * x * x;
  return pair(1 + 2, list(pair(\\"square\\", square), pair(\\"cube\\", cube)));
}
const square = __access_export__(importedFile(), \\"square\\");
square(5);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 25,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`__access_named_export__ returns first identifier if name exists multiple times in list of exported names: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "function importedFile() {
  const square = x => x * x;
  const cube = x => x * x * x;
  // The second instance of the name 'square' actually refers to the function 'cube'.
  return list(pair(\\"square\\", square), pair(\\"square\\", cube), pair(\\"cube\\", cube));
}
const square = __access_named_export__(importedFile(), \\"square\\");
square(5);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 25,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`__access_named_export__ returns identifier if name exists in list of exported names: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "function importedFile() {
  const square = x => x * x;
  const cube = x => x * x * x;
  return list(pair(\\"square\\", square), pair(\\"cube\\", cube));
}
const square = __access_named_export__(importedFile(), \\"square\\");
square(5);",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": 25,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`__access_named_export__ returns undefined if list of exported names is empty: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "function importedFile() {
  const square = x => x * x;
  const cube = x => x * x * x;
  return list();
}
__access_named_export__(importedFile(), \\"identity\\");",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": undefined,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`__access_named_export__ returns undefined if name does not exist in list of exported names: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "function importedFile() {
  const square = x => x * x;
  const cube = x => x * x * x;
  return list(pair(\\"square\\", square), pair(\\"cube\\", cube));
}
__access_named_export__(importedFile(), \\"identity\\");",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": undefined,
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;
